apps/discord-bot/challenge-bot/flux/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: challenge-bot
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: challenge-bot
  template:
    metadata:
      labels:
        app: challenge-bot
    spec:
      automountServiceAccountToken: false
      imagePullSecrets:
        - name: registries
      securityContext:
        fsGroup: 1000
      containers:
        - name: challenge-bot
          image: ghcr.io/likeon/geometa-challenge-bot:main # {"$imagepolicy": "geometa:challenge-bot"}
          imagePullPolicy: Always
          resources:
            requests:
              memory: 100Mi
              cpu: 100m
            limits:
              memory: 256Mi
              cpu: 500m
          volumeMounts:
            - name: state
              mountPath: /data
          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
      volumes:
        - name: state
          persistentVolumeClaim:
            claimName: challenge-bot-state
