apps/discord-bot/challenge-bot/flux/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: challenge-bot-egress-restricted
spec:
  endpointSelector:
    matchLabels:
      app: challenge-bot
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
          rules:
            dns:
              - matchPattern: "*"
    - toFQDNs:
        - matchName: gateway.discord.gg
        - matchName: discord.com
        - matchName: www.geoguessr.com
        - matchName: learnablemeta.com
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
